# mangle-dotnet

./: .gitignore  .gitmodules  README.md
.github/workflows/: release.yml
crates/mangle-dotnet-bindings/: Cargo.toml  build.rs
crates/mangle-dotnet-bindings/src/: lib.rs
samples/MangleSample/: MangleSample.csproj  Program.cs
src/Mangle/: AssemblyInfo.cs  Interop.cs  Mangle.csproj  MangleEngine.cs  MangleException.cs  MangleValue.cs  NativeMethods.g.cs
